src/parser/snapshots/guitar_tab__parser__parser_tests__score.snap
---
source: src/parser/parser_tests.rs
expression: parser.parse(example_score.lines())
---
Ok(
    Parse2Result {
        diagnostics: [],
        sections: [
            Part {
                part: [
                    Partline {
                        string_name: 'e',
                        measures: 0..=0,
                    },
                    Partline {
                        string_name: 'B',
                        measures: 0..=0,
                    },
                    Partline {
                        string_name: 'G',
                        measures: 0..=0,
                    },
                    Partline {
                        string_name: 'D',
                        measures: 0..=0,
                    },
                    Partline {
                        string_name: 'A',
                        measures: 0..=0,
                    },
                    Partline {
                        string_name: 'E',
                        measures: 0..=0,
                    },
                ],
            },
            Part {
                part: [
                    Partline {
                        string_name: 'e',
                        measures: 1..=1,
                    },
                    Partline {
                        string_name: 'B',
                        measures: 1..=1,
                    },
                    Partline {
                        string_name: 'G',
                        measures: 1..=1,
                    },
                    Partline {
                        string_name: 'D',
                        measures: 1..=1,
                    },
                    Partline {
                        string_name: 'A',
                        measures: 1..=1,
                    },
                    Partline {
                        string_name: 'E',
                        measures: 1..=1,
                    },
                ],
            },
        ],
        string_names: [
            'e',
            'B',
            'G',
            'D',
            'A',
            'E',
        ],
        strings: [
            [
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
            ],
            [
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Fret(
                        3,
                    ),
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Fret(
                        3,
                    ),
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Fret(
                        3,
                    ),
                },
            ],
            [
                RawTick {
                    element: Fret(
                        6,
                    ),
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Fret(
                        6,
                    ),
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Fret(
                        6,
                    ),
                },
                RawTick {
                    element: Rest,
                },
            ],
            [
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
            ],
            [
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
            ],
            [
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
                RawTick {
                    element: Rest,
                },
            ],
        ],
        measures: [
            [
                Measure {
                    content: 0..=2,
                    parent_line: 1,
                    index_on_parent_line: 1,
                },
                Measure {
                    content: 3..=5,
                    parent_line: 8,
                    index_on_parent_line: 1,
                },
            ],
            [
                Measure {
                    content: 0..=2,
                    parent_line: 2,
                    index_on_parent_line: 1,
                },
                Measure {
                    content: 3..=5,
                    parent_line: 9,
                    index_on_parent_line: 1,
                },
            ],
            [
                Measure {
                    content: 0..=2,
                    parent_line: 3,
                    index_on_parent_line: 1,
                },
                Measure {
                    content: 3..=5,
                    parent_line: 10,
                    index_on_parent_line: 1,
                },
            ],
            [
                Measure {
                    content: 0..=2,
                    parent_line: 4,
                    index_on_parent_line: 1,
                },
                Measure {
                    content: 3..=5,
                    parent_line: 11,
                    index_on_parent_line: 1,
                },
            ],
            [
                Measure {
                    content: 0..=2,
                    parent_line: 5,
                    index_on_parent_line: 1,
                },
                Measure {
                    content: 3..=5,
                    parent_line: 12,
                    index_on_parent_line: 1,
                },
            ],
            [
                Measure {
                    content: 0..=2,
                    parent_line: 6,
                    index_on_parent_line: 1,
                },
                Measure {
                    content: 3..=5,
                    parent_line: 13,
                    index_on_parent_line: 1,
                },
            ],
        ],
        offsets: [
            [
                3,
                4,
                5,
                46,
                47,
                48,
            ],
            [
                10,
                11,
                12,
                53,
                54,
                55,
            ],
            [
                17,
                18,
                19,
                60,
                61,
                62,
            ],
            [
                24,
                25,
                26,
                67,
                68,
                69,
            ],
            [
                31,
                32,
                33,
                74,
                75,
                76,
            ],
            [
                38,
                39,
                40,
                81,
                82,
                83,
            ],
        ],
        bend_targets: {},
    },
)
